# ANON-NEXUS

./: .gitignore  ABRIR_NEXUS_ANON.bat  CHANGELOG.md  INSTALACAO_NEXUS_ANON.html  README.md  anon_launcher.py  comando enviar.txt  commit.bat  install.py  install_check.py
backend/: .env.example  requirements.txt
data/: hybrid_security_audit.jsonl
docs/: ANON_DETECTOR_SUITE_NCE.yaml  ANON_DOCUMENT_PROCESSING_PRIORITY_5.yaml  ANON_EXTERNAL_AI_ADVISORS.yaml  ANON_HYBRID_SECURITY_ARCHITECTURE.yaml  ANON_JSON_CONTRACT_AND_INSTITUTIONS.yaml  ANON_NCE_CORE.yaml  COMPORTAMENTO_ESPECIALIZADO.md  DELOS_EXTRATO_BANCARIO_NCE.yaml  OLLAMA_MODELFILE.md  RIF_CSV_NCE.yaml  ROADMAP.md
frontend/: index.html  package-lock.json  package.json
scripts/: build-installer-package.ps1  create-anonrif2-model.ps1  create-integrity-manifest.ps1  install-nexus-anon.ps1  start-backend.ps1  start-desktop.ps1  start-frontend.ps1  start-nexus-anon.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_anonymizer_regressions.py  test_audit_manifest.py  test_confidence_review_pdf.py  test_delos_reverse_engineering.py  test_hybrid_security.py  test_identifier_detectors.py  test_manual_reanalysis.py  test_nce_consistency.py  test_ollama_json_contract.py  test_personalized_profile.py  test_pipeline_stage_improvements.py  test_pipeline_state.py  test_post_validator.py  test_priority8_9_fallback_and_corpus.py  test_profile_loader.py  test_quality_classifier.py  test_rif_reverse_engineering.py  test_safe_summary.py  test_sync_package.py  test_system_metrics.py  (+1 more)
(+532 files in other folders)
